[package]
name = "signaturize_derive"
version = "0.1.1"
edition = "2021"
license = "GPL-2.0"
description = "The derive macro for the signaturize crate"
homepage = "https://github.com/norpie/signaturize"
repository = "https://github.com/norpie/signaturize/tree/main/signaturize_derive"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.92", features = ["full"] }
